# ai-credit

./: .env.example  .gitignore  Dockerfile.backend  Makefile  Pipfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_multitenancy.py  003_single_target_constraints.py
app/: config.py  main.py
app/agent_groups/: models.py  router.py  schemas.py  service.py
app/agents/: models.py  router.py  schemas.py  service.py
app/audit/: models.py  service.py
app/auth/: models.py  router.py  schemas.py  service.py
app/budgets/: models.py  router.py  schemas.py  service.py
app/core/: dependencies.py  exceptions.py  security.py  tenancy.py
app/credentials/: models.py  router.py  schemas.py  service.py
app/db/: base.py  session.py
app/gateway/: router.py
app/groups/: models.py  router.py  schemas.py  service.py
app/ledger/: models.py  router.py  schemas.py  service.py
app/orgs/: models.py  router.py  schemas.py  service.py
app/policies/: models.py  router.py  schemas.py  service.py
app/pricing/: models.py  router.py  schemas.py  service.py
app/providers/: anthropic.py  base.py  mock.py  openai.py  registry.py
app/usage/: models.py  router.py  schemas.py  service.py
docs/: LLM_CONTEXT.md  USER_GUIDE.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+3 more)
scripts/: entrypoint.sh  seed.py  worker_entrypoint.sh
tests/: conftest.py  test_credit_deduction.py  test_governance.py  test_ledger.py  test_workflow.py
(+16 files in other folders)
